# minimal-diligent-base-app

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  main.hpp
